--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint client",
     "clean": "rm -rfv dist/*",
     "copy": "cp client/lib/index.html dist",
-    "build": "npm run copy && npm run bundle:js",
+    "build": "npm run lint && npm run copy && npm run bundle:js",
     "dev": "npm run clean && npm run copy && concurrent -k \"npm run bundle:less:watch\" \"npm run bundle:js:watch\" \"http-server dist -o\"",
     "test:client": "karma start client/test/config/karma.unit.js",
     "bundle:js": "NODE_PATH=client/lib browserify client/lib/index.js > dist/index.js",
