--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:client",
     "lint": "eslint client",
     "clean": "rm -rfv dist/*",
     "copy": "cp client/lib/index.html dist",
-    "build": "npm run lint && npm run copy && npm run bundle:js",
-    "dev": "npm run clean && npm run copy && concurrent -k \"npm run bundle:less:watch\" \"npm run bundle:js:watch\" \"http-server dist -o\"",
-    "test:client": "karma start client/test/config/karma.unit.js",
-    "bundle:js": "NODE_PATH=client/lib browserify client/lib/index.js > dist/index.js",
-    "bundle:js:watch": "NODE_PATH=client/lib watchify client/lib/index.js -v -o dist/index.js",
-    "bundle:less:watch": "autoless --source-map client/lib dist"
+    "build": "npm run copy && npm run build:js && npm run build:css",
+    "all": "npm run clean && npm run lint && npm run test && npm run build",
+    "dev": "npm run clean && npm run copy && concurrent -k \"npm run watch:css\" \"npm run watch:js\" \"http-server dist -o\"",
+    "test:client": "karma start client/test/config/karma.unit.js --single-run --no-auto-watch",
+    "build:js": "NODE_PATH=client/lib browserify client/lib/index.js > dist/index.js",
+    "build:css": "catw -c 'lessc --include-path=client/lib -' 'client/lib/*.less' > dist/style.css",
+    "watch:js": "NODE_PATH=client/lib watchify client/lib/index.js -v -o dist/index.js",
+    "watch:css": "catw -c 'lessc --include-path=client/lib --source-map-map-inline -' 'client/lib/*.less' -o dist/style.css -v"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "autoless": "0.1.7",
     "babel-plugin-syntax-jsx": "^6.1.18",
     "babel-plugin-transform-react-jsx": "^6.2.0",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "catw": "^1.0.1",
     "chai": "^3.4.1",
     "concurrently": "^1.0.0",
     "eslint": "^1.10.3",
@@ -34,6 +36,7 @@
     "karma-mocha": "^0.2.1",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-sinon-chai": "^1.1.0",
+    "less": "^2.5.3",
     "mocha": "^2.3.4",
     "phantomjs": "^1.9.19",
     "sinon": "^1.17.2",
