chore(app): add styling, dragging, multi-button and more
* vdom/h handles direct events correctly
* util/dragger utility allows for eazy drag handlers
* replace catw with chokidar for more robust watching
* refactor components to include styles
* really implement multi-button

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "dev": "npm run clean && npm run copy && concurrent -k \"npm run watch:css\" \"npm run watch:js\" \"http-server dist -o\"",
     "test:client": "karma start client/test/config/karma.unit.js --single-run --no-auto-watch",
     "build:js": "NODE_PATH=client/lib browserify client/lib/index.js > dist/index.js",
-    "build:css": "catw -c 'lessc --include-path=client/lib -' 'client/lib/*.less' > dist/style.css",
+    "build:css": "lessc --include-path=client/lib:client/styles client/lib/*.less dist/style.css",
     "watch:js": "NODE_PATH=client/lib watchify client/lib/index.js -v -o dist/index.js",
-    "watch:css": "catw -c 'lessc --include-path=client/lib --source-map-map-inline -' 'client/lib/*.less' -o dist/style.css -v"
+    "watch:css": "chokidar 'client/**/*.less' --initial -c 'npm run build:css -- --source-map-map-inline --verbose'"
   },
   "author": "",
   "license": "MIT",
@@ -24,8 +24,8 @@
     "babel-plugin-transform-react-jsx": "^6.2.0",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "catw": "^1.0.1",
     "chai": "^3.4.1",
+    "chokidar-cli": "^1.2.0",
     "concurrently": "^1.0.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.11.2",
@@ -56,6 +56,7 @@
     "debug": "^2.2.0",
     "dmn-js": "^0.3.1",
     "dom-delegator": "^13.1.0",
+    "domify": "^1.4.0",
     "domready": "^1.0.8",
     "events": "^1.1.0",
     "inherits": "^2.0.1",
