--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "domify": "^1.4.0",
     "domready": "^1.0.8",
     "events": "^1.1.0",
+    "format": "^0.2.1",
     "inherits": "^2.0.1",
     "lodash": "^3.10.1",
+    "next-tick": "^0.2.2",
     "raf": "^3.1.0",
     "virtual-hook": "^1.0.1"
   }
